fix(symfony-app.docker-hybrid:mysql): increase max_allowed_packet
Fix database import issue ("Server gone away...")

--- a/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
+++ b/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
@@ -27,6 +27,7 @@ services:
   database:
     image: 'mysql:{{ $mysql.version }}'
     ports: [3306]
+    command: --max_allowed_packet=1024M
     environment:
       MYSQL_USER: 'app'
       MYSQL_PASSWORD: 'app'
