feat(symfony-app:docker-hybrid): add RabbitMQ support

--- a/symfony-app.docker-hybrid/.manala/Makefile.tmpl
+++ b/symfony-app.docker-hybrid/.manala/Makefile.tmpl
@@ -1,6 +1,7 @@
 {{- $has_mysql := .Vars.system.mysql.version -}}
 {{- $has_redis := .Vars.system.redis.version -}}
 {{- $has_mailcatcher := .Vars.system.mailcatcher.version -}}
+{{- $has_rabbitmq := .Vars.system.rabbitmq.version -}}
 
 # Relative root dir ("."|".."|"../.."|…)
 _ROOT_DIR := $(patsubst ./%,%,$(patsubst %/.manala/Makefile,%,./$(filter %.manala/Makefile,$(MAKEFILE_LIST))))
@@ -58,6 +59,7 @@ _up:
 	{{- if $has_mysql }} database{{ end }}
 	{{- if $has_redis }} redis{{ end }}
 	{{- if $has_redis }} mailcatcher{{ end }}
+	{{- if $has_rabbitmq }} rabbitmq{{ end }}
 
 	{{ if $has_mysql -}}
 	@$(call message_warning, Waiting for the database to be ready...)
