fix(symfony-app.docker-hybrid:rabbitmq): use Docker image management integrated
This way we can have a web UI for managing RabbitMQ

--- a/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
+++ b/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
@@ -93,7 +93,7 @@ services:
 {{- if $has_rabbitmq }}
 
   rabbitmq:
-    image: 'rabbitmq:alpine'
+    image: 'rabbitmq:management-alpine'
     ports: [5672, 15672]
     environment:
       TZ: {{ .Vars.system.timezone }}
