fix(symfony-app.docker-hybrid): complete the generated .manala.yml template

--- a/symfony-app.docker-hybrid/.manala.yaml.tmpl
+++ b/symfony-app.docker-hybrid/.manala.yaml.tmpl
@@ -43,4 +43,14 @@ system:
         version: {{ .redis.version | toYaml }}
     {{- end }}
 
+    {{- if .mailcatcher.version }}
+    mailcatcher:
+        version: {{ .mailcatcher.version | toYaml }}
+    {{- end }}
+
+    {{- if .rabbitmq.version }}
+    rabbitmq:
+        version: {{ .rabbitmq.version | toYaml }}
+    {{- end }}
+
 {{- end }}
