feat(symfony-app.docker-hybrid): migrate from MySQL to MariaDB

--- a/symfony-app.docker-hybrid/.manala.yaml.tmpl
+++ b/symfony-app.docker-hybrid/.manala.yaml.tmpl
@@ -30,9 +30,9 @@ system:
             - config: |
                 ;App specific configuration
 
-    {{- if .mysql.version }}
-    mysql:
-        version: {{ .mysql.version | toYaml }}
+    {{- if .mariadb.version }}
+    mariadb:
+        version: {{ .mariadb.version | toYaml }}
         init: |
             CREATE DATABASE IF NOT EXISTS `app_test`;
             GRANT ALL ON `app_test`.* TO 'app'@'%';
