--- a/symfony-app.docker-hybrid/.manala/init-db/01.sql.tmpl
+++ b/symfony-app.docker-hybrid/.manala/init-db/01.sql.tmpl
@@ -1,3 +1,3 @@
-{{- if .Vars.system.mysql.init -}}
-{{- .Vars.system.mysql.init -}}
+{{- if .Vars.system.mariadb.init -}}
+{{- .Vars.system.mariadb.init -}}
 {{- end -}}
