imp(make): display symfony serve command

--- a/symfony-app.docker-hybrid/.manala/Makefile.tmpl
+++ b/symfony-app.docker-hybrid/.manala/Makefile.tmpl
@@ -76,7 +76,7 @@ _wait_for_database:
 
 _post_start_success:
 	@echo
-	@$(call message_success, You can now run the Symfony server)
+	@$(call message_success, You can now run the Symfony server with \"symfony serve\" command.)
 	@echo
 
 HELP += $(call help,up,                  Update and start the environment)
