feat(symfony-app.docker-hybrid): add dynamoDB support

--- a/symfony-app.docker-hybrid/.manala.yaml.tmpl
+++ b/symfony-app.docker-hybrid/.manala.yaml.tmpl
@@ -48,4 +48,9 @@ system:
         version: {{ .mailcatcher.version | toYaml }}
     {{- end }}
 
+    {{- if .dynamodb.version }}
+    dynamodb:
+        version: {{ .dynamodb.version | toYaml }}
+    {{- end }}
+
 {{- end }}
