--- a/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
+++ b/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
@@ -7,6 +7,7 @@ version: '3.6'
 {{- $has_mariadb := .Vars.system.mariadb.version -}}
 {{- $has_redis := .Vars.system.redis.version -}}
 {{- $has_mailcatcher := .Vars.system.mailcatcher.version -}}
+{{- $has_dynamodb := .Vars.system.dynamodb.version -}}
 
 {{ if or ($has_mariadb) ($has_redis) }}
 
@@ -16,6 +17,9 @@ volumes:
     {{- end }}
     {{ if $has_redis -}}
     redis-data:
+    {{- end }}
+    {{ if $has_dynamodb -}}
+    dynamodb-data:
     {{- end }}
 {{- end }}
 
@@ -83,5 +87,20 @@ services:
     environment:
       TZ: {{ .Vars.system.timezone }}
 
+{{- end }}
+
+
+{{- if $has_dynamodb }}
+
+  dynamodb:
+    image: 'amazon/dynamodb-local'
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+    ports: [8000]
+    environment:
+      TZ: {{ .Vars.system.timezone }}
+    volumes:
+      - dynamodb-data:/home/dynamodblocal/data
+    working_dir: /home/dynamodblocal
+    user: root # https://stackoverflow.com/a/68043230
 {{- end }}
 
