--- a/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
+++ b/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
@@ -26,7 +26,7 @@ services:
 
   database:
     image: 'mariadb:{{ $mariadb.version }}'
-    ports: [3306]
+    ports: ["3306:3306"]
     command: --max_allowed_packet=1024M
     environment:
       MYSQL_USER: 'app'
@@ -49,7 +49,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin
-    ports: [80]
+    ports: ["80:80"]
     environment:
       PMA_HOST: 'database'
       PMA_USER: 'app'
@@ -61,7 +61,7 @@ services:
 
   redis:
     image: 'redis:alpine'
-    ports: [6379]
+    ports: ["6379:6379"]
     environment:
       TZ: {{ .Vars.system.timezone }}
     volumes:
@@ -69,7 +69,7 @@ services:
 
   phpredisadmin:
     image: erikdubbelboer/phpredisadmin
-    ports: [80]
+    ports: ["81:80"]
     environment:
       REDIS_1_HOST: 'redis'
 
@@ -79,7 +79,7 @@ services:
 
   mailcatcher:
     image: 'schickling/mailcatcher'
-    ports: [1025, 1080]
+    ports: ["1025", "1080:1080"]
     environment:
       TZ: {{ .Vars.system.timezone }}
 
