feat(symfony-app.docker-hybrid): add a way to add additional configuration for MariaDB

--- a/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
+++ b/symfony-app.docker-hybrid/docker-compose.yaml.tmpl
@@ -37,6 +37,7 @@ services:
     volumes:
       - db-data:/var/lib/mysql
       - .manala/init-db:/docker-entrypoint-initdb.d
+      - .manala/config-db/99-additional-config.cnf:/etc/mysql/mariadb.conf.d/99-additional-config.cnf
     healthcheck:
       test: mysqladmin ping --silent
       interval: 10s
