--- a/symfony-app.docker-hybrid/.manala/Makefile.tmpl
+++ b/symfony-app.docker-hybrid/.manala/Makefile.tmpl
@@ -59,7 +59,7 @@ _symfony_proxy_start:
 
 _up:
 	@if [ "$(USE_DOCKER)" = "true" ]; then \
-		$(dc) up --detach $(MANDATORY_CONTAINERS); \
+		$(dc) up --wait --detach $(MANDATORY_CONTAINERS); \
 	else \
 		$(call message_warning, Skipping creating and starting Docker containers...); \
 	fi
@@ -71,30 +71,16 @@ _start:
 		$(call message_warning, Skipping starting Docker services...); \
 	fi
 
-_wait_for_database:
-{{- if $has_mariadb }}
-	@if [ "$(USE_DOCKER)" = "true" ]; then \
-		$(call message_warning, Waiting for the database to be ready...); \
-		until docker inspect -f {{ "{{.State.Health.Status}}" }} `$(dc) ps -q database` | grep -q "healthy"; do \
-			$(call message_warning, Waiting...); \
-			sleep 1; \
-		done; \
-		$(call message_success, The database is ready!); \
-	else \
-		$(call message_warning, Skipping waiting for database Docker container...); \
-	fi
-{{- end }}
-
 _post_start_success:
 	@echo
 	@$(call message_success, You can now run the Symfony server with \"symfony serve\" command.)
 	@echo
 
-HELP += $(call help,up,                  Update and start the environment)
-up: _symfony_proxy_start _up _wait_for_database _post_start_success
+HELP += $(call help,up,                  Start the environment)
+up: _symfony_proxy_start _up _post_start_success
 
-HELP += $(call help,start,               Start the environment)
-start: _symfony_proxy_start _start _wait_for_database _post_start_success
+HELP += $(call help,start,               Alias for \"up\")
+start: up
 
 HELP += $(call help,stop,                Stop the environment)
 stop:
