feat(symfony-app.docker-hybrid): add Meilisearch support

--- a/symfony-app.docker-hybrid/.manala.yaml.tmpl
+++ b/symfony-app.docker-hybrid/.manala.yaml.tmpl
@@ -48,4 +48,9 @@ system:
         version: {{ .mailcatcher.version | toYaml }}
     {{- end }}
 
+    {{- if .mailcatcher.version }}
+    meilisearch:
+        version: {{ .meilisearch.version | toYaml }}
+    {{- end }}
+
 {{- end }}
